--- a/DUTBites/Web.config
+++ b/DUTBites/Web.config
@@ -9,11 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DUTBitesDBContext"
-         connectionString="Data Source=.;Initial Catalog=DUTBitesDBContext;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
+    <add name="DUTBites3.0" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=DUTBites3.0;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -53,10 +50,6 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
